Remove use of Java 21 method.